# talking-avatars-mlx

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.sh
docs/: lip-blur-fix.md  upstream-alignment.md
scripts/: make_sample_video.py
